--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html=>
+<!DOCTYPE html>
 <html lang=en>
 <html>
   <head>
@@ -8,6 +8,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>Starters</h1>
+    <ul class="pokemon-list">
+    </ul>
     <script src="js/script.js"></script>
 </body>
 </html>
