--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <h1>Starters</h1>
-    <ul class="pokemon-list">
-    </ul>
+    <ul class="pokemon-list"></ul>
     <script src="js/script.js"></script>
 </body>
 </html>
