--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang=en>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Starters</h1>
+    <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
