updated js to show pokemon modal.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
+    <div id="modal-container"></div>
+    <div class="modal">
+    <button class='modal-close'></button>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/script.js"></script>
 </body>
