--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>repl.it</title>
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body background="img/pokeball.png">
     <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
     <div id="modal-container"></div>
