--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jason's Pokedex</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body background="img/pokeball.png">
-    <h1>Pokedex</h1>
+
+  <body class="container page-container">
+
+  <header>
+    <nav class="navbar sticky-top justify-content-center navbar-dark bg-dark">
+    <div class="row">
+    <div class="col">
+    <img src="img/pokemon.png" width="300" height="150" alt="Pokemon">
+      </div>
+        <form>
+          <input class="form-control col-lg-12" id="poke-search" type="search"
+                 placeholder="Who's that Pokemon?!" aria-label="Search"/>
+          <button class="btn btn-secondary" type="submit">It's....</button>
+        </form>
+      </div>
+    </nav>
+    </header>
+
+  <body background="img/pokedex-logo.png">
+
+    <main>
+         <div class="pokemon-container">
+     <ul class="pokemon-list"></ul>
+
+   <div class="modal fade" id="pokemon-modal" tabindex="-1" role="dialog" aria-hidden="true">
+     <div class="modal-dialog" role="document">
+       <div class="modal-content">
+         <div class="modal-header">
+           <h5 class="modal-title">Pokemon Name</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+             <span aria-hidden="true">&times;</span>
+           </button>
+         </div>
+         <div class="modal-body">
+
+         </div>
+         <div class="modal-footer">
+           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+         </div>
+       </div>
+     </div>
+   </div>
+   </div>
+       </main>
+
+
+    <!-- <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
     <div id="modal-container"></div>
     <div class="modal">
-    <button class='modal-close'></button>
+    <button class='modal-close'></button> -->
     <script src="js/promise-polyfill.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
