--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jason's Pokedex</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./dist/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="container page-container">
@@ -61,7 +61,7 @@
     <div class="modal">
     <button class='modal-close'></button> -->
     <script src="js/promise-polyfill.js"></script>
-    <script src="js/script.js"></script>
+    <script src="dist/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
